# central_server_app_contract

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
central_server_app_contract/: __init__.py
central_server_app_contract/auth/: __init__.py  factory.py  remote_store.py
central_server_app_contract/contract/: __init__.py  cli.py
central_server_app_contract/sso/: __init__.py  integration.py  token.py
central_server_app_foundation/: __init__.py
central_server_app_foundation/auth/: __init__.py  factory.py  remote_store.py  roles.py  user_store.py
central_server_app_foundation/auth_ui/: blueprint.py
central_server_app_foundation/auth_ui/templates/central_server_app_foundation/auth/: _user_body.html  login.html
central_server_app_foundation/contract/: cli.py
central_server_app_foundation/design/templates/central_server_app_foundation/design/: base.html
central_server_app_foundation/sso/: __init__.py  integration.py
template_app/data/: auth.db  settings.db
tests/: test_auth_ui.py  test_cli.py  test_data_paths.py  test_health_blueprint.py  test_remote_store.py  test_sso.py  test_version.py
