[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "central-server-app-foundation"
version = "0.2.0"
description = "CONTER supervisor contract: health/CLI/data-dir contract, remote auth against the Central, SSO cookie. The generic web chassis lives in control_foundation."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "werkzeug>=3.0",
    "itsdangerous>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["central_server_app_foundation*"]
